# awesome-scripts

./: pyproject.toml
awesome_scripts/: tax.py
